--- a/src/main/resources/templates/boardPages/boardList.html
+++ b/src/main/resources/templates/boardPages/boardList.html
@@ -13,21 +13,15 @@
                 <th>id</th>
                 <th>글쓴이</th>
                 <th>제목</th>
+                <th>작성일</th>
                 <th>조회수</th>
-                <th>글 내용</th>
             </tr>
             <tr th:each="board: ${boardList}">
                 <td th:text="${board.id}"></td>
-                <td th:text="${board.boardWriter}"></td>
+                <td><a th:href="@{|/board/${board.id}|}" th:text="${board.boardWriter}"></a></td>
                 <td th:text="${board.boardTitle}"></td>
+                <td th:text="${#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></td>
                 <td th:text="${board.boardHits}"></td>
-                <td th:text="${board.boardContents}"></td>
-                <td>
-                    <a th:href="@{|/board/${board.id}|}">조회</a>
-                </td>
-                <td>
-                    <a th:href="@{|/board/delete/${board.id}|}">삭제</a>
-                </td>
             </tr>
         </table>
     </div>
